[package]
name = "redis_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
lazy_static = "1.4.0"
parking_lot = "0.12.3"
serde = "1.0.213"
serde_json = "1.0.132"
serde_derive = "1.0.132"
redis = "0.27.5"
once_cell = "1.8.0"
chrono = "0.4.38"